Made an html page to deliver schedules and form groups for querying servers

--- a/dynamicBusNodeServer/views/placeHolder.html
+++ b/dynamicBusNodeServer/views/placeHolder.html
@@ -1,46 +1,93 @@
-<br />
-<h1>Bus Timetable</h1>
-<div class="cd-schedule loading">
-	<div class="timeline">
-		<ul>
-			<li><span>09:00</span></li>
-			<li><span>09:30</span></li>
-			<li><span>10:00</span></li>
-			<li><span>10:30</span></li>
-			<li><span>11:00</span></li>
-			<li><span>11:30</span></li>
-			<li><span>12:00</span></li>
-			<li><span>12:30</span></li>
-			<li><span>13:00</span></li>
-			<li><span>13:30</span></li>
-			<li><span>14:00</span></li>
-			<li><span>14:30</span></li>
-			<li><span>15:00</span></li>
-			<li><span>15:30</span></li>
-			<li><span>16:00</span></li>
-			<li><span>16:30</span></li>
-			<li><span>17:00</span></li>
-			<li><span>17:30</span></li>
-			<li><span>18:00</span></li>
-		</ul>
-	</div> <!-- .timeline -->
-	<div class="event-modal">
-		<header class="header">
-			<div class="content">
-				<span class="event-date"></span>
-				<h3 class="event-name"></h3>
+<!-- This is a template -->
+
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	</head>
+	<style>
+        /* override Bootstrap's container */
+        .container-fluid {
+            padding-right:5;
+            padding-left:5;
+            margin-right:auto;
+            margin-left:auto
+        }
+        body {
+		    background-color: #72BF61;
+		} 
+		h1 {
+		  font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
+		  font-size: 72px;
+		  padding: 20px 30px;
+		  text-align: center;
+		  text-transform: uppercase;
+		  text-rendering: optimizeLegibility;
+		}
+		.elegantshd {
+		  color: #131313;
+		  letter-spacing: .10em;
+		  text-shadow: 1px -1px 0 #72BF61;
+		}
+
+    </style>
+    <div class="p-3 mb-2 bg-dark text-white">
+		<div class="container-fluid">
+			<div class="row">
+				<h1 class="elegantshd"> Dynamic Bus Scheduler </h1>
 			</div>
-
-			<div class="header-bg"></div>
-		</header>
-
-		<div class="body">
-			<div class="event-info"></div>
-			<div class="body-bg"></div>
+			<div class="row">
+				<div class = "col-xs-12 col-sm-6 col-lg-6">
+					<div class="form-group">
+				        <label for="sel1">Select Search Type : </label>
+				        <select class="form-control" id="sel1">
+					        <option>Route</option>
+					        <option>Station</option>
+				        </select>
+	                </div>
+			    </div> 
+			    <div class = "col-xs-12 col-sm-6 col-lg-6">
+				    <div class="form-group">
+					    <label for="number">Number : </label>
+					    <input type="text" class="form-control" id="number">
+					</div>
+				</div>
+			</div>
+			<div class="row">
+	            <table class="table table-dark">
+	                <thead>
+	                    <tr>
+	                        <th>Bus Number</th>
+	                        <th>Estimated Arrival</th>
+	                        <th>Bus Type</th>
+	                        <th>Status</th>                                          
+	                    </tr>
+	                </thead>
+	                <!-- Example entries -->   
+	                <tbody>
+		                <tr>
+		                    <td>1</td>
+		                    <td>2 minutes</td>
+		                    <td>Bendy-Bus</td>
+		                    <td><span class="label label-success">On Time</span>
+		                    </td>                                       
+		                </tr>
+		                <tr>
+		                    <td>2</td>
+		                    <td>3 minutes</td>
+		                    <td>Standard Bus</td>
+		                    <td><span class="label label-important">Late</span></td>                                       
+		                </tr>
+		                <tr>
+		                    <td>3</td>
+		                    <td>14 minutes</td>
+		                    <td>Double-decker Bus</td>
+		                    <td><span class="label label-warning">Pending</span></td>
+		                </tr>                               
+	                </tbody>
+	            </table>
+			</div>
 		</div>
-
-		<a href="#0" class="close">Close</a>
 	</div>
-
-	<div class="cover-layer"></div>
-</div> <!-- .cd-schedule -->
+</html>
