--- a/dynamicBusNodeServer/views/placeHolder.html
+++ b/dynamicBusNodeServer/views/placeHolder.html
@@ -50,7 +50,7 @@
 					        </select>
 					    </div>
 				        <div class="col-auto my-1">
-						    <input type="text" placeholder="Number" name="user">
+						    <input type="text" placeholder="Number" name="num">
 						</div>
 						<div class="col-auto my-1">
 						    <input type="submit" value="Submit">
