--- a/dynamicBusNodeServer/views/placeHolder.html
+++ b/dynamicBusNodeServer/views/placeHolder.html
@@ -71,9 +71,9 @@
 	                </thead>
 	                <tbody>
 		                <tr ng-repeat="x in schedule">
+		                    <td>{{x.arrivalTime}}</td>
 		                    <td>{{x.route}}</td>
 		                    <td>{{x.station}}</td>
-		                    <td>{{x.arrivalTime}}</td>
 		                    <td><span class="label label-success">{{x.status}}</span>
 		                    </td>                                       
 		                </tr>                            
@@ -84,13 +84,15 @@
 	</div>
 	<script>
 		var serverList = [window.location.href];
-
+		var mapRouteServer = {};
+		/*
 		var mapRouteServer = { //placeholder values, set to empty once the server can handle GET /appData
 			r0:serverList[0],
 			r1:serverList[0],
 			r2:serverList[0],
 			r3:serverList[0]
 		};
+		*/
 
 		var workingServer = 0;      // index of the serverList element to be used,
 		                            // increment on connection failure
@@ -101,6 +103,8 @@
 
 		function handleError(err, callback) {
 			// TODO check if the error is a connection failure before running the code below
+			console.log(err);
+			/*
 			++workingServer;
 			if (workingServer === serverList.length) {
 				workingServer = 0;
@@ -111,6 +115,7 @@
 			}
 			if (callback)
 				callback();
+			*/
 		}
 
 		function handleSuccess() {
@@ -123,7 +128,7 @@
 		}
 
 		// selects the server corresponding to the route and passes its address to the callback function
-		function selectSever(route, callback) {
+		function selectServer(route, callback) {
 			var url;
 			if (mapRouteServer['r' + route])
 				url = mapRouteServer['r' + route];
@@ -132,32 +137,35 @@
 			callback(url);
 		}
 
-		function makeRouteDataRequest($http, $scope, data) {
+		function makeRouteDataRequest($scope, $http, data) {
 			selectServer(data.route, function(url) {
-				$http.post(url, JSON.stringify(data)).then(
+				$http.post(url + 'routeData', JSON.stringify(data)).then(
 					function(response) {		// success
-						if (response.body.serverOfRoute !== url) {
+						if (response.data.serverOfRoute !== url) {
 							// the server is not the one handling that route,
 							// update server map and list and make the request to the new address
-							mapRouteServer['r' + data.route] = response.body.serverOfRoute;
-							pushUnique(serverList, response.body.serverOfRoute);
+							mapRouteServer['r' + data.route] = response.data.serverOfRoute;
+							pushUnique(serverList, response.data.serverOfRoute);
 							makeRouteDataRequest($http, $scope, data);
 						} else {
-							$scope.schedule = response.body.schedule;
+							// TODO: convert arrival times to 24h format
+							// (from seconds relative to the moment of the request)
+							// TODO: add the elements in the order of the arival times 
+							$scope.schedule.concat(response.data.schedule);
 						}
 			    	},
 			    	function(response) {		// error, TODO
-						handleError(response, makeRouteDataRequest.bind(null, $http, $scope, data));
+						handleError(response, makeRouteDataRequest.bind(null, $scope, $http, data));
 			    	}
 				);
 			});
 		}
 
-		function makeAppDataRequest($http, $scope) {
-			$http.get(serverList[workingServer]).then(
+		function makeAppDataRequest($scope, $http) {
+			$http.get(serverList[workingServer] + 'appData').then(
 		    	function(response) {		// success
-					mapRouteServer = response.body.mapRouteServer;
-					$scope.stationRoutes = response.body.stationRoutes;
+					mapRouteServer = response.data.mapRouteServer;
+					$scope.stationRoutes = response.data.stationRoutes;
 					for (var x in mapRouteServer) {
 						$scope.routes.push(parseInt(x.substring(1)));
 						pushUnique(serverList, mapRouteServer[x]);
@@ -171,6 +179,7 @@
 
 		var app = angular.module('scheduleApp', []);
 		app.controller('scheduleController', function($scope, $http) {
+			/*
 			// placeholder values, delete once the server can handle GET /appData
 			$scope.stationRoutes = [
 				{
@@ -186,6 +195,7 @@
 			];
 		    $scope.routes = [0, 1, 2, 3];
 		    //---------------------------------------------------------------------
+		    */
 
 		    $scope.getRouteData = function(){
 		    	$scope.schedule = [];
@@ -193,10 +203,10 @@
 		    	if ($scope.selectedStation) {
 		    		requestData.station = $scope.selectedStation.id;
 		    	}
-		    	if ($scope.selectedRoute) {
+		    	if (typeof $scope.selectedRoute !== 'undefined') {
 		    		requestData.route = $scope.selectedRoute;
 		    		makeRouteDataRequest($scope, $http, requestData);
-		    	} else if ($scope.selectedStation) {
+		    	} else if (typeof $scope.selectedStation !== 'undefined') {
 		    		// if the route is not specified, make a request for each route containing the station
 		    		for (var i = 0; i != $scope.selectedStation.routes.length; ++i) {
 		    			requestData.route = $scope.selectedStation.routes[i];
@@ -208,12 +218,10 @@
 		    	}
 		    }
 
-		    // uncomment this when the server can handle it
-		    /*
 		    $scope.stationRoutes = [];
 		    $scope.routes = [];
-		    makeAppDataRequest($http, $scope);
-		    */
+		    makeAppDataRequest($scope, $http);
+
 		});
 	</script>
 </html>
