--- a/dynamicBusNodeServer/views/placeHolder.html
+++ b/dynamicBusNodeServer/views/placeHolder.html
@@ -218,6 +218,7 @@
 		    	} else if ($scope.selectedStation != null) {
 		    		// if the route is not specified, make a request for each route containing the station
 		    		for (var i = 0; i != $scope.selectedStation.routes.length; ++i) {
+		    			console.log("is it this?");
 		    			requestData.route = $scope.selectedStation.routes[i];
 		    			makeRouteDataRequest($scope, $http, requestData);
 		    		}
